Fix deprecated declaration

* gd-two-lines-renderer.c: Fix deprecated declaration
gtk_style_context_get_font to gtk_style_context_get

https://bugzilla.gnome.org/show_bug.cgi?id=694359